@@ -1,5 +1,12 @@
 2016-11-11  Bruno Haible  <bruno@clisp.org>
 
+	Modernize: Remove support for SINIX.
+	* lispbibl.d (UNIX_SINIX): Remove macro.
+	(SINGLEMAP_MEMORY): Remove SINIX workaround.
+	* src/spvw_mmap.d (mmap_init_pagesize): Likewise.
+
+2016-11-11  Bruno Haible  <bruno@clisp.org>
+
 	Modernize: Remove support for Ultrix.
 	* lispbibl.d (UNIX_DEC_ULTRIX, UNIX_DEC_ULTRIX_GCCBUG): Remove macros.
 	* control.d: Remove Ultrix GCC workarounds.
